kubernets/weixin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weixin-deployment
spec:
  selector:
    matchLabels:
      app: weixin
  replicas: 2
  template:
    metadata: 
      labels:
        app: weixin
    spec:
      containers:
      - name: weixin
        image: registry.ppc.com/public/weixin:v1.1.0
