kubernets/weixin-src.yaml
apiVersion: v1
kind: Service
metadata:
  name: weixin-src
  labels:
    app: weixin
spec:
  ports:
  - port: 8111
    targetPort: 8111
  selector:
    app: weixin
