kubernets/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: xxx
    http:
      paths:
      - path: /
        backend:
          serviceName: weixin-src
          servicePort: 8111

  - host: xxx1 
    http:
      paths:
      - path: /
        backend:
          serviceName: weixin-src
          servicePort: 8111
